--- a/snake_Ladder.html
+++ b/snake_Ladder.html
@@ -9,7 +9,11 @@
  
 </head>
 <body id="body">
-        <h1>THE SNAKE & LADDER GAME!</h1>
+        <h1 id="heading">THE SNAKE & LADDER GAME!</h1>
+        <div class="main_div">
+            <img src="https://www.flaticon.com/svg/static/icons/svg/2950/2950480.svg" width="100px"></img>
+            <img src="https://www.flaticon.com/svg/static/icons/svg/1061/1061522.svg" width="100px"></img>
+        </div>
         <button onclick="start()" id="strt">START THE GAME</button>
         <script type="text/javascript" src="snake_ladder.js"></script>
 </body>
